[WED-3] Change css to avoid overflows

--- a/engines/spree_wedding_atelier/app/assets/stylesheets/wedding_atelier/registrations/_containers.scss
+++ b/engines/spree_wedding_atelier/app/assets/stylesheets/wedding_atelier/registrations/_containers.scss
@@ -1,6 +1,7 @@
 .onboarding-container {
   @extend .container-fluid;
   background-color: $white-two;
+  height: 100vh;
   margin: 50px 10px 20px;
   padding: 15px;
 
@@ -36,9 +37,8 @@
     margin: 0;
     padding: 0;
 
-    .left-side,
-    .right-side {
-      height: 100vh;
+    .left-side, .right-side {
+      height: 100%;
     }
 
     .left-side {
